# cmm-data

./: .gitignore  .pre-commit-config.yaml  260207_Vertex_Batch_Processing_Instructions.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  DISTRIBUTION.md  LICENSE  MANIFEST.in  QUICKSTART.md  QUICKSTART_COLLABORATORS.md  README.md  RELEASE_NOTES.md  SESSION_LOG.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_source_request.md  feature_request.md
.github/workflows/: docs.yml  preprocess.yml  publish.yml  test.yml  validate.yml
API_Scripts/: 2022_commodity_ids.json  FIND_2022_COMMODITY_IDS.md  GOLD_QA_DATA_COLLECTION.md  QUICKSTART.md  README.md  SUMMARY.md  USGS_MCS_DOWNLOAD.md  download_usgs_mcs.py  download_usgs_mcs_2022_manual.py  download_usgs_mcs_individual.py  example_usage.py  extract_years_from_mcs.py  find_2022_commodity_items.py  find_and_download_usgs_mcs.py  find_sciencebase_ids.py  pull_gold_qa_data.py  requirements.txt  un_comtrade_query.py
API_Scripts/gold_qa_data/: cobalt_trade_data.csv  collection_summary.json  copper_trade_data.csv  gallium_trade_data.csv  graphite_trade_data.csv  heavy_ree_trade_data.csv  light_ree_trade_data.csv  lithium_trade_data.csv  nickel_trade_data.csv
API_Scripts/usgs_mcs_data/: 2022_individual_download_summary.json  2022_manual_download_summary.json
API_Scripts/usgs_mcs_data/2022/individual_commodities/: cobalt_mcs2022-cobal_salient.csv  copper_mcs2022-coppe_salient.csv  gallium_mcs2022-galli_salient.csv  germanium_mcs2022-germa_salient.csv  graphite_mcs2022-graph_salient.csv  lithium_mcs2022-lithi_salient.csv  manganese_mcs2022-manga_salient.csv  nickel_mcs2022-nicke_salient.csv  platinum_mcs2022-plati_salient.csv  rare_earths_mcs2022-raree_salient.csv  titanium_mcs2022-timin_salient.csv  tungsten_mcs2022-tungs_salient.csv
API_Scripts/usgs_mcs_data/2023/Mineral Industry Trends and Salient Statistics/: _MCS2023_Mineral_Industry_Trends_and_Salient_Statistics.xml
API_Scripts/usgs_mcs_data/2024/mineral industry trends and salient statistics/: MCS2024_Fig10_Price_Growth_Rates.csv  MCS2024_Fig11_Pch_Consump_2022_2023.csv  MCS2024_Fig12_Pch_Consump_2019_2023.csv  MCS2024_Fig1_Minerals_in_Economy.csv  MCS2024_Fig4_Value_by_Type.csv  MCS2024_T1_Mineral_Industry_Trends.csv  MCS2024_T2_Mineral_Economic_Trends.csv  MCS2024_T3_State_Value_Rank.csv  MCS2024_T5_Critical_Minerals_Salient.csv  _MCS2024_Mineral_Industry_Trends_and_Salient_Statistics.xml
API_Scripts/usgs_mcs_data/2024/world/: MCS 2024 Data Release Revision File 2024-03-06.txt  MCS2024-bismu_world.csv  mcs2024-abras_world.csv  mcs2024-alumi_world.csv  mcs2024-antim_world.csv  mcs2024-arsen_meta.xml  mcs2024-arsen_world.csv  mcs2024-asbes_world.csv  mcs2024-barit_world.csv  mcs2024-bauxi_meta.xml  mcs2024-bauxi_world.csv  mcs2024-beryl_world.csv  mcs2024-boron_meta.xml  mcs2024-boron_world.csv  mcs2024-bromi_world.csv  mcs2024-cadmi_world.csv  mcs2024-cemen_meta.xml  mcs2024-cemen_world.csv  mcs2024-chrom_world.csv  mcs2024-clays_world.csv  mcs2024-diamo_world.csv  mcs2024-diato_meta.xml  (+62 more)
API_Scripts/usgs_mcs_data/extracted_years/: extraction_summary.json
Aurora/: 251224_cofig.yaml
Claude/: 260102_Preprocessing_Documentation.md  generate_schemas.py  session_log_2025-12-30.md
Claude/cmm_mcp_server/: .gitignore  README.md  __init__.py  batch_processor.py  comtrade_client.py  config.py  data_tools.py  document_tools.py  ocr.py  requirements.txt  search.py  server.py
Exp_Design/: 261013_Fine_Tuning_Node_Hours.docx  CMM_API_MCP_Analysis.md  CMM_Gold_QA_Allocation_Matrix.md  CMM_Gold_QA_Source_Analysis.md  CMM_LLM_Baseline_Gold_QA_Methodology.md
Exp_Design/batch_analysis/: README.md  config.py  generate_report.py  matrix_parser.py  parse_results.py  prepare_batch.py  requirements.txt  submit_batch.py
Exp_Design/fine_tuning/: .gitignore  260206_LLM_FineTuning_README.docx  README.md  pyproject.toml  ~$0206_LLM_FineTuning_README.docx
Exp_Design/fine_tuning/configs/: phi4_4bit_lora.yaml  phi4_8bit_lora.yaml  phi4_lora.yaml
Exp_Design/fine_tuning/src/cmm_fine_tune/: __init__.py  constants.py  models.py
Exp_Design/fine_tuning/src/cmm_fine_tune/data/: csv_loader.py  jsonl_formatter.py  prepare.py  qa_generator.py  splitter.py
Exp_Design/fine_tuning/src/cmm_fine_tune/evaluation/: evaluate.py  gold_qa_loader.py  inference.py  report.py  scorer.py
Exp_Design/fine_tuning/src/cmm_fine_tune/inference/: chat.py
Exp_Design/fine_tuning/src/cmm_fine_tune/training/: config.py  train.py
Exp_Design/fine_tuning/tests/: test_csv_loader.py  test_jsonl_formatter.py  test_qa_generator.py  test_scorer.py
OSTI_retrieval/: 251230_OSTI_Article_Details.md  document_catalog.json  downloaded_ids.txt  osti_retrieval.py  retrieval_stats.json
PNNL_Compute_Examples/: Fine_tune_Llama_with_LoRa.out.ipynb
docs/: MINDAT_DATA.md  Makefile  changelog.rst  conf.py  configuration.rst  contributing.rst  datasets.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: .gitkeep  cheatsheet.md
docs/_templates/: .gitkeep
docs/api/: loaders.rst  modules.rst  utilities.rst  visualizations.rst
examples/: basic_usage.py  cmm_data_tutorial.ipynb  data_export.py  visualization_examples.py
scripts/: build_wheel.py  build_wheel.sh  demo.tape  demo_recording.py  publish_pypi.sh  quickstart.py  run_all_tests.py  setup_complete.sh  verify_installation.py
src/cmm_data/: __init__.py  catalog.py  config.py  exceptions.py
src/cmm_data/clients/: __init__.py  bgs.py  claimm.py  google_scholar.py  models.py  osti.py
src/cmm_data/loaders/: __init__.py  base.py  ga_chronostrat.py  google_scholar.py  mindat.py  netl_ree.py  oecd_supply.py  osti_docs.py  preprocessed.py  usgs_commodity.py  usgs_ore.py
src/cmm_data/utils/: __init__.py  parsing.py
src/cmm_data/visualizations/: __init__.py  commodity.py  geospatial.py  timeseries.py
tests/: __init__.py  test_basic.py  test_google_scholar_client.py
tests/clients/: test_bgs_client.py  test_claimm_client.py  test_osti_client.py
(+328 files in other folders)
