[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmm-data"
version = "0.1.0"
description = "Critical Minerals Modeling data access library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CMM Team", email = "cmm@pnnl.gov" }
]
keywords = ["critical minerals", "supply chain", "data", "USGS", "OECD"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "fiona>=1.9.0",
]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
]
full = ["cmm-data[geo,viz,dev]"]

[project.urls]
Homepage = "https://github.com/PNNL-CMM/cmm-data"
Documentation = "https://pnnl-cmm.github.io/cmm-data/"
Repository = "https://github.com/PNNL-CMM/cmm-data"
Issues = "https://github.com/PNNL-CMM/cmm-data/issues"
Changelog = "https://github.com/PNNL-CMM/cmm-data/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/cmm_data"]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["ARG", "PLR"]  # allow unused args and complexity in tests

[tool.ruff.lint.isort]
known-first-party = ["cmm_data"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests",
    "docs",
    "examples",
]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geopandas.*"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/cmm_data"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 50

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", "examples"]
skips = ["B101"]  # assert statements are fine in non-production code
