[project]
name = "cmm-fine-tune"
version = "0.1.0"
description = "Phi-4 LoRA fine-tuning pipeline for Critical Minerals & Materials domain knowledge"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.21.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "rouge-score>=0.1.2",
    "nltk>=3.9",
    "scikit-learn>=1.4.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
cmm-prepare = "cmm_fine_tune.data.prepare:main"
cmm-train = "cmm_fine_tune.training.train:main"
cmm-evaluate = "cmm_fine_tune.evaluation.evaluate:main"
cmm-chat = "cmm_fine_tune.inference.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmm_fine_tune"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E402",    # module import not at top of file (intentional in some modules)
    "E501",    # line too long (strings; ruff format handles code lines)
    "PLC0415", # import not at top level (intentional in test/main functions)
    "ERA001",  # commented-out code
    "PTH123",  # builtin-open (prefer pathlib.Path.open eventually)
    "RUF012",  # mutable-class-default (ClassVar annotation)
    "B904",    # raise-without-from-inside-except
    "B007",    # unused-loop-control-variable
    "PLW0603", # global-statement
    "ARG001",  # unused-function-argument
    "ARG002",  # unused-method-argument
    "PLR0911", # too-many-return-statements
    "SIM117",  # multiple-with-statements
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLC0415"]
"**/test_*" = ["PLC0415"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
